[package]
name = "yogurt-yaml"
version = "0.0.0"
authors = ["Johannes Jeising <Johannes.Jeising@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Get embedded yaml from yogurt files"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
yaml-rust = "0.4.3"