[package]
name = "yogurt-yaml"
version = "0.0.1"
authors = ["Johannes Jeising <Johannes.Jeising@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Get embedded yaml from yogurt files"

[lib]
name = "libcurt"
path = "src/lib.rs"

[[bin]]
name = "curt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
regex = "1.3.1"
yaml-rust = "0.4.3"