[package]
name = "yogurt-yaml"
version = "0.1.0"
authors = ["Johannes Jeising <Johannes.Jeising@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://yocurt.github.io/docs/yogurt/"
repository = "https://github.com/yocurt/yogurt-yaml"
documentation = "https://yocurt.github.io/docs/yogurt/"
readme = "README.md"
description = """
Get embedded yaml from yogurt files
"""


[lib]
name = "libcurt"
path = "src/lib.rs"

[[bin]]
name = "curt-extract"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
yaml-rust = "0.4.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false
bench = false
